welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (talking == false ) {
                ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( talking == true ) {
        ^